Hiding away docker container dependency